assets/css/Footer-Multi-Column-icons.css
.bs-icon {
  --bs-icon-size: .75rem;
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  align-items: center;
  font-size: var(--bs-icon-size);
  width: calc(var(--bs-icon-size) * 2);
  height: calc(var(--bs-icon-size) * 2);
  color: var(--bs-primary);
}

.bs-icon-xs {
  --bs-icon-size: 1rem;
  width: calc(var(--bs-icon-size) * 1.5);
  height: calc(var(--bs-icon-size) * 1.5);
}

.bs-icon-sm {
  --bs-icon-size: 1rem;
}

.bs-icon-md {
  --bs-icon-size: 1.5rem;
}

.bs-icon-lg {
  --bs-icon-size: 2rem;
}

.bs-icon-xl {
  --bs-icon-size: 2.5rem;
}

.bs-icon.bs-icon-primary {
  color: var(--bs-white);
  background: var(--bs-primary);
}

.bs-icon.bs-icon-primary-light {
  color: var(--bs-primary);
  background: rgba(var(--bs-primary-rgb), .2);
}

.bs-icon.bs-icon-semi-white {
  color: var(--bs-primary);
  background: rgba(255, 255, 255, .5);
}

.bs-icon.bs-icon-rounded {
  border-radius: .5rem;
}

.bs-icon.bs-icon-circle {
  border-radius: 50%;
}

.btn-right {
  float: right;
}

.h1-black {
  color: black;
}

.link-white {
  color: white !important;
}

.fp-watermark {
  visibility: hidden;
}

a {
  text-decoration: none;
}

.footer-head {
  color: white;
}

.body-black {
  background-color: black;
}

.article-card {
  padding: 20px;
  margin-bottom: 20px;
  border-radius: 1.5em;
}

.scarlet-body {
  background-color: #232526!important;
}

@media (min-width: 300px) {
  .banner-chat {
    position: absolute;
    height: 5rem;
    top: 0;
    width: 100%;
    background: rgb(0,104,157);
    z-index: 1000;
  }
}

@media (min-width: 576px) {
  .banner-chat {
    height: 7rem;
  }
}

@media (min-width: 768px) {
  .sdg_logo {
    position: absolute;
    right: 20px;
    visibility: visible!important;
  }
}

.sdg_logo {
  visibility: hidden;
}

.sdg16logo {
  position: absolute;
}

.article-card-title {
  font-size: 25px;
  font-weight: 300;
}

.article-title {
  font-family: 'Poppins';
  font-weight: 700;
  letter-spacing: 0px;
  padding: 20px;
}

.article-body {
  background-color: black;
}

@media (min-width: 768px) {
  .article-title {
    font-size: 40px!important;
  }
}

